Bug #71 Centered poster image added by Media Element JS (so overlaps poster image provided by the video element [iet:4494625]

--- a/application/themes/ouplayer_base/css/ouplayer-base.css
+++ b/application/themes/ouplayer_base/css/ouplayer-base.css
@@ -70,6 +70,16 @@ h1 {
 	width:100%;
 	height:100% !important; /*Unfortunate, but necessary given the Ender.js problem with '100%' - see ../views/..body.php */
 	}
+
+/*
+  Make sure that the poster that Media Element JS adds is centered if it is not as 
+  wide as the player (and also is in the same place as any poster added via the video 
+  element)
+*/
+.mejs-poster img {
+  margin: 0 auto;
+}
+
 .mejs-overlay-play, .mejs-layer {
 	position:fixed;
 	height:auto !important;
